--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-popup": "^0.8.0",
+    "react-slick": "^0.18.0",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.5.5",
